Simulating modal choice between walking and bus+walking (without waiting times so far).

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "External/boost"]
 	path = External/boost
 	url = git@github.com:boostorg/boost.git
+[submodule "External/ortools"]
+	path = External/ortools
+	url = git@github.com:google/or-tools.git
