Cleaned up CMake. Removed extraneous randomc and stocc dependencies-

--- a/Launchers/CMakeLists.txt
+++ b/Launchers/CMakeLists.txt
@@ -26,19 +26,24 @@
 # Executable for P2P Algorithms
 add_executable(RunP2PAlgo RunP2PAlgo.cc)
 target_compile_definitions(RunP2PAlgo PRIVATE CSV_IO_NO_THREAD)
-target_link_libraries(RunP2PAlgo ${RoutingKit_LIBRARY} kassert)
+target_compile_options(RunP2PAlgo PRIVATE ${FULL_WARNINGS})
+target_link_libraries(RunP2PAlgo routingkit kassert)
 if(OpenMP_FOUND)
     target_link_libraries(RunP2PAlgo OpenMP::OpenMP_CXX)
 endif()
+target_include_directories(RunP2PAlgo SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 
 # Executable for KaRRi Dynamic Taxi Sharing Simulation
 add_executable(karri KaRRi.cpp)
 target_compile_definitions(karri PRIVATE CSV_IO_NO_THREAD)
-target_link_libraries(karri ${RoutingKit_LIBRARY} kassert)
+target_compile_options(karri PRIVATE ${FULL_WARNINGS})
+target_link_libraries(karri routingkit kassert)
 if(OpenMP_FOUND)
     target_link_libraries(karri OpenMP::OpenMP_CXX)
 endif()
+target_include_directories(karri PRIVATE ${EXTERNAL_DIR}/vectorclass)
+target_include_directories(karri SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 # include KaRRi compile time parameters
 include(KaRRI_compile_time_parameters.cmake)
