--- a/RawData/CMakeLists.txt
+++ b/RawData/CMakeLists.txt
@@ -26,45 +26,67 @@
 
 add_executable(ConvertGraph ConvertGraph.cc)
 target_compile_definitions(ConvertGraph PRIVATE CSV_IO_NO_THREAD)
-target_link_libraries(ConvertGraph ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert)
+target_compile_options(ConvertGraph PRIVATE ${FULL_WARNINGS})
+target_link_libraries(ConvertGraph ${PROJ_LIBRARY} routingkit kassert)
+target_include_directories(ConvertGraph PRIVATE ${EXTERNAL_DIR}/rapidxml)
+target_include_directories(ConvertGraph SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 add_executable(GenerateODPairs GenerateODPairs.cc)
 target_compile_definitions(GenerateODPairs PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(GenerateODPairs PRIVATE ${FULL_WARNINGS})
 target_link_libraries(GenerateODPairs kassert)
 if(OpenMP_FOUND)
   target_link_libraries(GenerateODPairs OpenMP::OpenMP_CXX)
 endif()
+target_include_directories(GenerateODPairs SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 
 add_executable(GenerateRandomVehicles GenerateRandomVehicles.cc)
 target_compile_definitions(GenerateRandomVehicles PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(GenerateRandomVehicles PRIVATE ${FULL_WARNINGS})
+target_link_libraries(GenerateRandomVehicles kassert)
+target_include_directories(GenerateRandomVehicles SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 add_executable(DrawRandomDepartureTimes DrawRandomDepartureTimes.cc)
 target_compile_definitions(DrawRandomDepartureTimes PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(DrawRandomDepartureTimes PRIVATE ${FULL_WARNINGS})
+target_include_directories(DrawRandomDepartureTimes SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 add_executable(OsmToCarAndPassengerGraph OsmToCarAndPassengerGraph.cc)
 target_compile_definitions(OsmToCarAndPassengerGraph PRIVATE CSV_IO_NO_THREAD)
-target_link_libraries(OsmToCarAndPassengerGraph ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert)
+target_compile_options(OsmToCarAndPassengerGraph PRIVATE ${FULL_WARNINGS})
+target_link_libraries(OsmToCarAndPassengerGraph ${PROJ_LIBRARY} routingkit kassert)
+target_include_directories(OsmToCarAndPassengerGraph SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 add_executable(TransformLocations TransformLocations.cc)
 target_compile_definitions(TransformLocations PRIVATE CSV_IO_NO_THREAD)
-target_link_libraries(TransformLocations ${PROJ_LIBRARY} ${RoutingKit_LIBRARY} kassert)
+target_compile_options(TransformLocations PRIVATE ${FULL_WARNINGS})
+target_link_libraries(TransformLocations ${PROJ_LIBRARY} routingkit kassert)
+target_include_directories(TransformLocations SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 
-add_executable(CheckExistingAttributesInNetworkFile CheckExistingAttributesInNetworkFile.cc
-)
+add_executable(CheckExistingAttributesInNetworkFile CheckExistingAttributesInNetworkFile.cc)
 target_compile_definitions(CheckExistingAttributesInNetworkFile PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(CheckExistingAttributesInNetworkFile PRIVATE ${FULL_WARNINGS})
+target_link_libraries(CheckExistingAttributesInNetworkFile kassert)
+target_include_directories(CheckExistingAttributesInNetworkFile SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 add_executable(GenerateGeoJsonForGraph GenerateGeoJsonForGraph.cc)
 target_compile_definitions(GenerateGeoJsonForGraph PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(GenerateGeoJsonForGraph PRIVATE ${FULL_WARNINGS})
 target_link_libraries(GenerateGeoJsonForGraph PRIVATE nlohmann_json::nlohmann_json kassert)
+target_include_directories(GenerateGeoJsonForGraph SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 add_executable(GenerateGeoJsonForVehicles GenerateGeoJsonForVehicles.cc)
 target_compile_definitions(GenerateGeoJsonForVehicles PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(GenerateGeoJsonForVehicles PRIVATE ${FULL_WARNINGS})
 target_link_libraries(GenerateGeoJsonForVehicles PRIVATE nlohmann_json::nlohmann_json kassert)
+target_include_directories(GenerateGeoJsonForVehicles SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
 
 add_executable(GenerateGeoJsonForRequests GenerateGeoJsonForRequests.cc)
 target_compile_definitions(GenerateGeoJsonForRequests PRIVATE CSV_IO_NO_THREAD)
+target_compile_options(GenerateGeoJsonForRequests PRIVATE ${FULL_WARNINGS})
 target_link_libraries(GenerateGeoJsonForRequests PRIVATE nlohmann_json::nlohmann_json kassert)
+target_include_directories(GenerateGeoJsonForRequests SYSTEM PRIVATE ${EXTERNAL_DIR}/fast-cpp-csv-parser)
 
