--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,8 @@
 # ******************************************************************************
 
 
-cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
 project(RoutingFramework CXX)
-
-# Directories containing .cc source files.
-set(SOURCE_DIRECTORIES Launchers RawData)
 
 # Determine the language standard.
 set(CMAKE_CXX_STANDARD 20)
@@ -36,65 +33,45 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Flags when building for the Devel configuration.
-if(CMAKE_CXX_COMPILER_ID MATCHES GNU|Clang)
-  set(CMAKE_CXX_FLAGS_DEVEL -O3)
-endif()
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE Devel)
-endif()
+if (CMAKE_CXX_COMPILER_ID MATCHES GNU|Clang)
+    set(CMAKE_CXX_FLAGS_DEVEL -O3)
+endif ()
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Devel)
+endif ()
 
 # Enable the compiler to use extended instructions in generated code.
-if(CMAKE_CXX_COMPILER_ID MATCHES GNU|Clang)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
-endif()
+if (CMAKE_CXX_COMPILER_ID MATCHES GNU|Clang)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+endif ()
 option(DISABLE_AVX "Disable use of instructions in the AVX extended instruction set." OFF)
-if(DISABLE_AVX)
-  if(CMAKE_CXX_COMPILER_ID MATCHES GNU|Clang)
-    message("Disabling use of AVX instructions.")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-avx")
-  endif()
-endif()
+if (DISABLE_AVX)
+    if (CMAKE_CXX_COMPILER_ID MATCHES GNU|Clang)
+        message("Disabling use of AVX instructions.")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-avx")
+    endif ()
+endif ()
 
 # Request warnings.
-if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
-  set(FULL_WARNINGS "-Werror" "-Wfatal-errors" "-Wpedantic" "-pedantic-errors" "-Wall" "-Wextra" "-ftemplate-backtrace-limit=1" "-Wno-unknown-pragmas" "-Wno-sign-compare")
-elseif(CMAKE_CXX_COMPILER_ID MATCHES Clang)
-  set(FULL_WARNINGS "-Werror" "-Wall" "-Wextra" "-pedantic-errors" "-ferror-limit=1" "-ftemplate-backtrace-limit=1" "-Wno-sign-compare")
-endif()
+if (CMAKE_CXX_COMPILER_ID MATCHES GNU)
+    set(FULL_WARNINGS "-Werror" "-Wfatal-errors" "-Wpedantic" "-pedantic-errors" "-Wall" "-Wextra" "-ftemplate-backtrace-limit=1" "-Wno-unknown-pragmas" "-Wno-sign-compare")
+elseif (CMAKE_CXX_COMPILER_ID MATCHES Clang)
+    set(FULL_WARNINGS "-Werror" "-Wall" "-Wextra" "-pedantic-errors" "-ferror-limit=1" "-ftemplate-backtrace-limit=1" "-Wno-sign-compare")
+endif ()
 
 include_directories(${CMAKE_SOURCE_DIR})
 
-# Find openmp libraries installed via package manager
+# Dependencies installed via package manager
 find_package(OpenMP)
-find_library(PROJ_LIBRARY proj)
 
-# Add json library from git submodule
-set(JSON_BuildTests OFF CACHE INTERNAL "")
-set(CMAKE_WARN_DEPRECATED OFF CACHE BOOL "")
-add_subdirectory(External/json)
+# Dependencies from git submodules and bundled libraries
+add_subdirectory(External)
 
-# Add RoutingKit library (needs to be built beforehand!) and include headers from git submodule.
-# Use interface target to bundle sources and headers.
-find_library(RoutingKit_LIBRARY routingkit PATHS External/RoutingKit/lib)
-if(NOT RoutingKit_LIBRARY)
-  message(FATAL_ERROR "RoutingKit library not found. Did you forget to build the library (see ReadMe)?")
-endif()
-set(RoutingKit_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/External/RoutingKit/include/")
-add_library(routingkit INTERFACE)
-target_link_libraries(routingkit INTERFACE ${RoutingKit_LIBRARY})
-target_include_directories(routingkit SYSTEM INTERFACE ${RoutingKit_INCLUDE_DIR}) # include as SYSTEM to avoid warnings for features deprecated in C++20 as RoutingKit is C++17
+# Dependencies fetched at configure time:
+include(FetchContentDependencies.cmake)
 
-# Add kassert library from git submodule
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  set(KASSERT_ASSERTION_LEVEL 40)
-else()
-  set(KASSERT_ASSERTION_LEVEL 20)
-endif ()
-add_subdirectory(External/kassert)
-
-set(EXTERNAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/External)
-
-
-foreach(SRC_DIR ${SOURCE_DIRECTORIES})
-  add_subdirectory(${SRC_DIR})
-endforeach()
+# Targets for this project are defined in directories Launchers and RawData
+set(TARGETS_DIRECTORIES Launchers RawData)
+foreach (TAR_DIR ${TARGETS_DIRECTORIES})
+    add_subdirectory(${TAR_DIR})
+endforeach ()
