--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,23 @@ endif ()
 include_directories(${CMAKE_SOURCE_DIR})
 
 # Dependencies installed via package manager
-find_package(OpenMP)
+find_package(OpenMP REQUIRED)
+
+# Find HWLOC Library
+find_path(HWLOC_INCLUDE_DIR NAME hwloc.h
+        HINTS $ENV{HOME}/local/include /opt/local/include /usr/local/include /usr/include)
+find_library(HWLOC_LIBRARY NAME hwloc
+        HINTS $ENV{HOME}/local/lib64 $ENV{HOME}/local/lib /usr/local/lib64 /usr/local/lib /opt/local/lib64 /opt/local/lib /usr/lib64 /usr/lib
+)
+
+IF (HWLOC_INCLUDE_DIR AND HWLOC_LIBRARY)
+    message(STATUS "Found hwloc library: inc=${HWLOC_INCLUDE_DIR}, lib=${HWLOC_LIBRARY}")
+    include_directories(${HWLOC_INCLUDE_DIR})
+    link_libraries(${HWLOC_LIBRARY})
+ELSE ()
+    message(FATAL_ERROR "
+    HwLoc library not found. Install HwLoc on your system.")
+ENDIF ()
 
 # Dependencies from git submodules and bundled libraries
 add_subdirectory(External)
