--- a/Launchers/CMakeLists.txt
+++ b/Launchers/CMakeLists.txt
@@ -37,7 +37,7 @@ endif()
 add_executable(karri KaRRi.cpp)
 target_compile_definitions(karri PRIVATE CSV_IO_NO_THREAD)
 target_compile_options(karri PRIVATE ${FULL_WARNINGS})
-target_link_libraries(karri routingkit kassert fast_cpp_csv_parser vectorclass hwloc TBB::tbb)
+target_link_libraries(karri routingkit kassert fast_cpp_csv_parser vectorclass hwloc TBB::tbb TBB::tbbmalloc)
 if(OpenMP_FOUND)
     target_link_libraries(karri OpenMP::OpenMP_CXX)
 endif()
